--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=h1, initial-scale=1.0">
     <title>Document</title>
 </head>
+    <style href="miestilo.css">
 <body>
     <h1>Acá va el título</h1>
     <h2>Acá va párrafo 1>
